<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Goods List</string>￥

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_new_goods">Insert A New Goods</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Goods</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here…</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a goods</string>

    <!-- Title for the activity to add a new goods [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_goods">Add a Goods</string>

    <!-- Title for the activity to edit an existing goods [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_goods">Edit goods</string>

    <!-- Label for editor menu option to save goods and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current goods [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new goods has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_goods_successful">Goods saved</string>

    <!-- Toast message in editor when new goods has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_goods_failed">Error with saving goods</string>

    <!-- Toast message in editor when current goods was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_goods_successful">Goods updated</string>

    <!-- Toast message in editor when current goods has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_goods_failed">Error with updating goods</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current goods [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current goods was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_goods_successful">Goods deleted</string>

    <!-- Toast message in editor when current goods has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_goods_failed">Error with deleting goods</string>

    <!-- Dialog message to ask the user to confirm deleting the current goods [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg1">Delete this goods?</string>

    <!-- Dialog message to ask the user to confirm deleting all goods [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg2">Delete all goods?</string>

    <!-- Dialog button text for the option to confirm deleting the current goods [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current goods [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview" translatable="false">Overview</string>


    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_goods_name">Name</string>

    <!-- Text hint for amount field in the editor [CHAR LIMIT=30] -->
    <string name="hint_goods_amount">Amount</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_add_goods_amount">Add to amount</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_cut_back_goods_amount">Cut back to amount</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_goods_price">price/￥</string>

    <!-- Units for price of the goods (dollars) [CHAR LIMIT=5] -->
    <string name="unit_goods_price" translatable="false">￥</string>

    <!-- Text for sales volume field in the editor [CHAR LIMIT=30] -->
    <string name="text_goods_sales_volume" translatable="false">time(s) sell</string>

    <!-- Text for sales volume field in the editor [CHAR LIMIT=30] -->
    <string name="show_goods_sales_volume" translatable="false">0</string>

    <string name="amount_string">amount:</string>
    <string name="price_string">price:</string>
    <string name="dollar_string" translatable="false">￥</string>
    <string name="sales_times_string">sales time(s):</string>
    <string name="sell_string">SELL</string>
    <string name="the_number_0" translatable="false">0</string>
    <string name="times_sell_string" translatable="false">  time(s) sell</string>
    <string name="order_string">ORDER</string>
    <string name="add_new_goods_button">NEW</string>
    <string name="add_picture_button">Picture</string>
    <string name="warning_name_not_null">Goods\' name cannot be null!</string>
    <string name="warning_amount_not_null">Goods\' amount cannot be null!</string>
    <string name="warning_price_not_null">Goods\' price cannot be null!</string>
    <string name="warning_image_not_null">Goods\' picture cannot be null!</string>
    <string name="warning_not_image_to_show">No image to show!</string>
    <string name="image_preview">Image Preview</string>
    <string name="amount_toast">The amount is less than 0.</string>
    <string name="alert_title">Permission necessary</string>
    <string name="alert_message">External storage permission is necessary</string>
</resources>
